recompiled css, deleted unknown button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4956,6 +4956,9 @@ form * {
 .bonus-row {
   margin-bottom: 60px; }
 
+#header-search-collapse {
+  padding: 15px; }
+
 @media (max-width: 992px) {
   .deposit {
     padding: 100px 0 0 0;
@@ -4976,7 +4979,22 @@ form * {
   .rb-levels-info [class^="col-"] {
     width: 50%; }
   .pre-footer [class^="col-"] {
-    width: 100%; } }
+    width: 100%; }
+  .navbar-search .form-control {
+    padding: 10px; }
+  .modal.in .modal-dialog {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0); }
+  .modal.in .form-control {
+    padding: 10px; }
+  .modal.in .modal-form__input {
+    height: auto;
+    padding: 10px; }
+  .modal.in .modal-form__text-field {
+    padding: 10px; }
+  .modal.in .social-enter {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 0; } }
 
 @media (max-width: 400px) {
   .games-list [class^="col-"],
