--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3135,8 +3135,11 @@
     width: 100%;
     margin-bottom: 60px;
     font-family: SFUIHeavy;
-    font-size: 100px;
+    font-size: 7em;
     text-align: center; }
+    @media (max-width: 380px) {
+      .greeting-bonus__count {
+        font-size: 5em; } }
   .greeting-bonus__button-wrapper {
     width: 100%;
     margin-bottom: 90px;
