--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3375,6 +3375,10 @@
     font-family: SFUIHeavy;
     font-size: 20px;
     text-align: center; }
+    @media (max-width: 768px) {
+      .bonus-more__text {
+        margin-bottom: 30px;
+        font-size: 16px; } }
   .bonus-more__button-wrapper {
     width: 100%;
     text-align: center; }
