--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8686,7 +8686,7 @@ button.close {
     margin-bottom: 20px; }
 
 .modal-form--contact {
-  width: 460px; }
+  padding: 40px 0; }
   @media (max-width: 768px) {
     .modal-form--contact {
       width: 100%; } }
