--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6076,28 +6076,6 @@ button.close {
       width: 24px; }
       .header .ds-logo-wrap-mobile img {
         max-width: 100%; } }
-  .header .search-result {
-    position: absolute;
-    top: 100%;
-    min-width: 300px;
-    max-width: 100%; }
-    .header .search-result ul {
-      margin: 0;
-      background-color: #232323;
-      list-style: none; }
-      .header .search-result ul li {
-        padding: 10px;
-        cursor: pointer;
-        -webkit-transition: .1s;
-        transition: .1s; }
-        .header .search-result ul li:hover {
-          background-color: #ed383f; }
-  .header .visible {
-    z-index: 1000;
-    opacity: 1; }
-  .header .visible {
-    z-index: -1;
-    opacity: -1; }
 
 .main-nav {
   position: relative;
@@ -7657,24 +7635,6 @@ button.close {
       background-color: #fff; }
     .search__close:hover::after {
       background-color: #fff; }
-  .search .search-result {
-    position: absolute;
-    min-width: 300px;
-    bottom: 100%; }
-    .search .search-result ul {
-      margin: 0;
-      background-color: #232323;
-      list-style: none; }
-      .search .search-result ul li {
-        padding: 10px;
-        cursor: pointer;
-        -webkit-transition: .1s;
-        transition: .1s; }
-        .search .search-result ul li:hover {
-          background-color: #ed383f; }
-  .search .visible {
-    z-index: -1;
-    opacity: -1; }
 
 .top-games {
   position: absolute;
@@ -11210,3 +11170,27 @@ ul.user-authorized-true {
 @media (max-width: 992px) {
   .registration-bonus-pers {
     display: none; } }
+
+.search-result {
+  position: absolute;
+  min-width: 300px;
+  bottom: 100%; }
+  .search-result ul {
+    margin: 0;
+    background-color: #232323;
+    list-style: none; }
+    .search-result ul li {
+      padding: 10px;
+      cursor: pointer;
+      -webkit-transition: .1s;
+      transition: .1s; }
+      .search-result ul li:hover {
+        background-color: #ed383f; }
+
+.header .search-result {
+  bottom: auto;
+  top: 100%; }
+
+.visible {
+  z-index: -1;
+  opacity: -1; }
